# INFO-H410-Project

./: .gitignore  README.md  generate_data_folder.sh  main.py  main_test.py  pyproject.toml  requirements.txt
source/: base_parameters .py  cnn_model.py  config.py  generate_data.py  metrics.py  preprocess_image.py  segnet_model.py  test_model.py  trainer.py
