[tool.poetry]
name = "Organ Segmentation"
version = "0.1.0"
description = "For a given CT scan, Spleen, kidney, Pancreas and liver are detected"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.11"
tensorflow = "~=2.7.0"
SimpleITK = "~=2.1.1"
numpy = "~=1.21.3"
matplotlib = "~=3.4.3"
sklearn = "^0.0"
pandas = "^1.4.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
